# shorty

./: Cargo.toml  Dockerfile  README.adoc  Rocket.toml  database.sqlite
.github/workflows/: docker-publish.yml
src/: main.rs
src/wordlists/: eng.rs  mod.rs
